# uba-aed2

./: .gitignore  README.md  Template.tex
Finales/2021-03-04/: AED2-2021-03-04.tex  ej1.tex  ej2.tex  ej3.tex  ej4.tex  ej5.tex
Finales/2021-03-04/python/: ej2.py
Finales/2021-04-21/: AED2-2021-04-21.tex  ej1.tex  ej2.tex  ej3.tex  ej5.tex
Finales/2021-04-21/python/: ej5.py
Finales/2022-07-19/: AED2-2022-07-19.tex  a.txt  ej1.tex  ej2.tex  ej3.tex  ej4.tex  ej5.tex
Finales/2022-08-02/: AED2-2022-08-02.tex  ej1.tex  ej2.tex  ej3.tex  ej4.tex
Finales/2022-08-09/: AED2-2022-08-09.tex  ej1.tex  ej2.tex  ej3.tex  ej4.tex
Laboratorios/labo01/: CMakeLists.txt
Laboratorios/labo01/src/: algobot.cpp  algobot.h  funciones.cpp
Laboratorios/labo01/tests/: tests_algobot.cpp  tests_funciones.cpp
Laboratorios/labo02/: CMakeLists.txt
Laboratorios/labo02/src/: Geometria.cpp  Juego.cpp  Libreta.cpp  Recordatorios.cpp  Truco.cpp
Laboratorios/labo02/tests/: test_geometria.cpp  test_juego.cpp  test_libreta.cpp  test_recordatorios.cpp  test_truco.cpp
Laboratorios/labo02/tests/gtest-1.8.1/: gtest-all.cc  gtest.h  gtest_main.cc
Laboratorios/labo03/: CMakeLists.txt
Laboratorios/labo03/src/: Fecha.cpp  Funciones.cpp  Funciones.h  Libreta.cpp  Libreta.h  Meses.h  Periodo.cpp  Periodo.h  Truco.cpp  Truco.h
Laboratorios/labo03/tests/: ej1_periodo.cpp  ej2_periodo_y_fecha.cpp  ej3_funciones.cpp  ej_testing.cpp  solucion_testing.cpp
Laboratorios/labo04/: CMakeLists.txt  Dockerfile  valgrind-wrapper
Laboratorios/labo04/src/: ConexionJugador.cpp  ConexionJugador.h  Internet.cpp  Internet.h  Proxy.cpp  Proxy.h  Proxy2.cpp  Proxy2.h  SistemaDeMensajes.cpp  SistemaDeMensajes.h
Laboratorios/labo04/tests/: sdm_tests.cpp  sdm_tests_bonus.cpp
Laboratorios/labo04/tests/gtest-1.8.1/: gtest-all.cc
Laboratorios/labo05/: CMakeLists.txt
Laboratorios/labo05/correcciones/2022-05-16/: Lista.h
Laboratorios/labo05/src/: Lista.hpp
Laboratorios/labo05/tests/: lista_tests.cpp
Laboratorios/labo06/: CMakeLists.txt
Laboratorios/labo06.2/: CMakeLists.txt
Laboratorios/labo06.2/src/: algoritmos.hpp
Laboratorios/labo06.2/tests/: algo_tests.cpp
Laboratorios/labo06/src/: Diccionario.cpp  Diccionario.h  Diccionario.hpp  Multiconjunto.hpp  Templates.cpp  Templates.hpp
Laboratorios/labo06/tests/: test_base.cpp  test_diccionario.cpp  test_multiconjunto.cpp  test_templates.cpp
Laboratorios/labo06/tests/google-test/: Makefile  cmake_install.cmake  gtest.cbp
Laboratorios/labo07/: CMakeLists.txt
Laboratorios/labo07/correcciones/2022-05-17/: Conjunto.h
Laboratorios/labo07/src/: Conjunto.hpp
Laboratorios/labo07/tests/: conjunto-tests.cpp
Laboratorios/labo08/: CMakeLists.txt
Laboratorios/labo08/correcciones/2022-06-07/: string_map.h  string_map.hpp
Laboratorios/labo08/src/: string_map.h  string_map.hpp
Laboratorios/labo08/tests/: string_map_tests.cpp
Laboratorios/tps/tp1/: TP1.tex  aed2-diseno.sty  aed2-itef.sty  aed2-parcial.cls  aed2-practica.cls  aed2-symb.sty  aed2-tad.sty  aed2-tokenizer.sty  aed2-tp.cls  caratula.sty  notas.tex
Laboratorios/tps/tp1/especificacion/: mapa.tex  pos.tex  renombres.tex  servidor.tex  simcity.tex
Laboratorios/tps/tp1/modulos/: mapa.tex  servidor.tex  simcity.tex
Laboratorios/tps/tp2/: CMakeLists.txt  README.md
Laboratorios/tps/tp2/cmake_modulos/: FindSDL2.cmake
Laboratorios/tps/tp2/gui/: InterfazGrafica.cpp  InterfazGrafica.h  ManejadorDeEventos.cpp  ManejadorDeEventos.h  RenderizadorServidorGrafico.cpp  RenderizadorServidorGrafico.h  ServidorGrafico.cpp  ServidorGrafico.h  Textura.cpp  Textura.h  main.cpp
Laboratorios/tps/tp2/src/: Mapa.cpp  Mapa.h  Servidor.cpp  Servidor.h  SimCity.cpp  SimCity.h  Tipos.h  Utils.cpp  Utils.h  Utils.hpp  aed2_Servidor.cpp  aed2_Servidor.h  string_map.h  string_map.hpp
Laboratorios/tps/tp2/tests/: aed2_servidor_tests.cpp  string_map_tests.cpp
Laboratorios/valgrind-mac/: Dockerfile  README.md  valgrind-mac
Parciales/: Huecos.py
Prácticas/Soluciones/: Práctica1-1.spec  Práctica2.md
Prácticas/Soluciones/Práctica1/: 01-SecuenciaExtendida.tad  02-ArbolBinarioExtendido.py  02-ArbolBinarioExtendido.tad  03-ConjuntoExtendido.tad  04-SecuenciaExtendida2.py  04-SecuenciaExtendida2.tad  05-ArbolTernarioExtendido.py  05-ArbolTernarioExtendido.tad  06-RosetreeExtendido.py  06-RosetreeExtendido.tad  07-Polinomio.tad  07-Polinomios.tad  09-Electroimán.tad  1-SecuenciaExtendida.tad  10-A-FilaDelBanco.tad  10-B-FilaDelBanco.tad  10-C-FilaDelBanco.tad  12-JuegoDeLaOca.tad  13-A-Colectivo.tad  16-Juego.tad  17-PeajesDelZar.tad  18-RedAntisocial.tad  19-OficinaPostal.tad  20-TécnicosADomicilio.tad  21-Carpinteros.tad  5-ArbolTernarioExtendido.py  5-ArbolTernarioExtendido.tad  6-RosetreeExtendido.tad  7-Polinomios.tad  ConjuntoExtendido.py  Práctica1-1.spec  Práctica1-13.tad  Práctica1-2.tad  Práctica1-3.spec  Práctica1-4.spec  Práctica1-6.spec
Prácticas/Soluciones/Práctica3/: Ejercicio2.md  Ejercicio5.md
Prácticas/Soluciones/Práctica4/: Ejercicio3.md
Prácticas/Soluciones/Práctica5/: Ejercicio16.md  Ejercicio5.md  Ejercicio6.md  Práctica5.tex  Template.tex  ej13.tex  ej14.tex  ej15.tex  ej16.tex  ej17.tex  ej18.tex  ej2.tex  ej3.tex  ej4.tex  ej5.tex  ej6.tex  ej7.tex  ej9.tex
Prácticas/Soluciones/Práctica5/python/: ej14.py  ej15.py  ej17.py  ej18.py  ej3.py  ej4.py  ej5.py  ej6.py  ej7.py  utils.py
Prácticas/Soluciones/Práctica6/: Práctica6.tex  ej1.tex  ej10.tex  ej11.tex  ej12.tex  ej2.tex  ej3.tex  ej4.tex  ej5.tex  ej6.tex  ej7.tex  ej8.tex  ej9.tex
Prácticas/Soluciones/Práctica6/python/: ej3.py  ej9.py
